--- a/spaceship-titanic/SpaceShipTitanic.ipynb
+++ b/spaceship-titanic/SpaceShipTitanic.ipynb
@@ -5,7 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exploratory Data Analysis in the Notebook"
+    "# Titanic Notebook "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Findings so far\n",
+    "* Linear regression results in a number between 0 and 1. \n",
+    "* Logistic regression gives a value of 0 or 1. \n",
+    "* There must be a way to categorise LR value by rounding (unsure name of this)\n",
+    "* If interested in turning categorical variables into numerical then can map them or encode them to numerical values so that they can be correctly evaluated.\n",
+    "\n",
+    "* Used forward feature selection to determine combination of (numerical) features that when combined, and fitted to a linear regression model returns the lowest mean square error. \n"
    ]
   },
   {
@@ -27,7 +41,8 @@
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import missingno as msno \n"
+    "# import missingno as msno \n",
+    "# haven't been able to install but want to keep note of it. \n"
    ]
   },
   {
